--- a/heroku/pom.xml
+++ b/heroku/pom.xml
@@ -37,6 +37,11 @@
         <artifactId>tomcat-jsp-api</artifactId>
         <version>7.0.22</version>
     </dependency>
+    <dependency>
+        <groupId>com.google.code.findbugs</groupId>
+        <artifactId>jsr305</artifactId>
+        <version>1.3.7</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>langDetect</finalName>
